rs/client-gen-v2/tests/snapshots/generator__aliases_works.snap
---
source: rs/client-gen-v2/tests/generator.rs
expression: gen_client(IDL)
---
// Code generated by sails-client-gen-v2. DO NOT EDIT.
#[cfg(feature = "with_mocks")]
#[cfg(not(target_arch = "wasm32"))]
extern crate std;
#[allow(unused_imports)]
use sails::{client::*, collections::*, prelude::*};

pub mod aliases {
    use super::*;

    #[sails::sails_type(crate = sails)]
    #[derive(PartialEq, Clone, Debug)]
    pub struct MyStruct {
        pub f: u32,
    }
    pub type MyU32 = u32;
    pub type MyStructAlias = MyStruct;
    pub type MyGeneric<T> = Result<T, String>;

    pub trait Aliases {
        type Env: sails::client::GearEnv;
        fn do_something(
            &mut self,
            p: MyU32,
        ) -> sails::client::PendingCall<io::DoSomething, Self::Env>;
        fn gen(&mut self) -> sails::client::PendingCall<io::Gen, Self::Env>;
    }

    pub struct AliasesImpl;

    impl sails::client::Identifiable for AliasesImpl {
        const INTERFACE_ID: sails::InterfaceId =
            sails::InterfaceId::from_bytes_8([171, 248, 234, 235, 51, 129, 39, 39]);
    }

    impl<E: sails::client::GearEnv> Aliases for sails::client::Service<AliasesImpl, E> {
        type Env = E;
        fn do_something(
            &mut self,
            p: MyU32,
        ) -> sails::client::PendingCall<io::DoSomething, Self::Env> {
            self.pending_call((p,))
        }
        fn gen(&mut self) -> sails::client::PendingCall<io::Gen, Self::Env> {
            self.pending_call(())
        }
    }

    pub mod io {
        use super::*;
        sails::io_struct_impl!(DoSomething (p: super::MyU32) -> super::MyStructAlias, 0, <super::AliasesImpl as sails::client::Identifiable>::INTERFACE_ID);
        sails::io_struct_impl!(Gen () -> super::MyGeneric<u32, >, 1, <super::AliasesImpl as sails::client::Identifiable>::INTERFACE_ID);
    }

    #[cfg(feature = "with_mocks")]
    #[cfg(not(target_arch = "wasm32"))]
    pub mod mockall {
        use super::*;
        use sails::mockall::*;
        mock! {
            pub Aliases {}

            #[allow(refining_impl_trait)]
            #[allow(clippy::type_complexity)]
            impl aliases::Aliases for Aliases {
                type Env = sails::client::GstdEnv;
                fn do_something (&mut self, p: MyU32) -> sails::client::PendingCall<aliases::io::DoSomething, sails::client::GstdEnv>;fn gen (&mut self, ) -> sails::client::PendingCall<aliases::io::Gen, sails::client::GstdEnv>;
            }
        }
    }
}
