rs/client-gen-v2/tests/snapshots/generator__basic_works.snap
---
source: rs/client-gen-v2/tests/generator.rs
expression: gen_client(idl)
---
// Code generated by sails-client-gen-v2. DO NOT EDIT.
#[cfg(feature = "with_mocks")]
#[cfg(not(target_arch = "wasm32"))]
extern crate std;
#[allow(unused_imports)]
use sails::{client::*, collections::*, prelude::*};

pub mod basic {
    use super::*;

    #[sails::sails_type(crate = sails)]
    #[derive(PartialEq, Clone, Debug)]
    pub struct MyParam {
        pub f1: u32,
        pub f2: Vec<String>,
        pub f3: Option<(u8, u32)>,
    }
    #[sails::sails_type(crate = sails)]
    #[derive(PartialEq, Clone, Debug)]
    pub enum MyParam2 {
        Variant1,
        Variant2(u32),
        Variant3(u32),
        Variant4(u8, u32),
        Variant5 { f1: String, f2: Vec<u8> },
    }

    pub trait Basic {
        type Env: sails::client::GearEnv;
        fn do_that(&mut self, p1: (u8, u32)) -> sails::client::PendingCall<io::DoThat, Self::Env>;
        fn do_this(
            &mut self,
            p1: u32,
            p2: MyParam,
        ) -> sails::client::PendingCall<io::DoThis, Self::Env>;
    }

    pub struct BasicImpl;

    impl sails::client::Identifiable for BasicImpl {
        const INTERFACE_ID: sails::InterfaceId =
            sails::InterfaceId::from_bytes_8([82, 241, 49, 169, 231, 31, 0, 230]);
    }

    impl<E: sails::client::GearEnv> Basic for sails::client::Service<BasicImpl, E> {
        type Env = E;
        fn do_that(&mut self, p1: (u8, u32)) -> sails::client::PendingCall<io::DoThat, Self::Env> {
            self.pending_call((p1,))
        }
        fn do_this(
            &mut self,
            p1: u32,
            p2: MyParam,
        ) -> sails::client::PendingCall<io::DoThis, Self::Env> {
            self.pending_call((p1, p2))
        }
    }

    pub mod io {
        use super::*;
        sails::io_struct_impl!(DoThat (p1: (u8, u32, )) -> u8, 0, <super::BasicImpl as sails::client::Identifiable>::INTERFACE_ID);
        sails::io_struct_impl!(DoThis (p1: u32, p2: super::MyParam) -> u16, 1, <super::BasicImpl as sails::client::Identifiable>::INTERFACE_ID);
    }

    #[cfg(feature = "with_mocks")]
    #[cfg(not(target_arch = "wasm32"))]
    pub mod mockall {
        use super::*;
        use sails::mockall::*;
        mock! {
            pub Basic {}

            #[allow(refining_impl_trait)]
            #[allow(clippy::type_complexity)]
            impl basic::Basic for Basic {
                type Env = sails::client::GstdEnv;
                fn do_that (&mut self, p1: (u8, u32, )) -> sails::client::PendingCall<basic::io::DoThat, sails::client::GstdEnv>;fn do_this (&mut self, p1: u32, p2: MyParam) -> sails::client::PendingCall<basic::io::DoThis, sails::client::GstdEnv>;
            }
        }
    }
}
