rs/client-gen-v2/tests/snapshots/generator__codec_selection.snap
---
source: rs/client-gen-v2/tests/generator.rs
expression: generated
---
// Code generated by sails-client-gen-v2. DO NOT EDIT.
#[cfg(feature = "with_mocks")]
#[cfg(not(target_arch = "wasm32"))]
extern crate std;
#[allow(unused_imports)]
use sails::{client::*, collections::*, prelude::*};
pub struct CodecProgramProgram;

impl CodecProgramProgram {
    pub const ROUTE_ID_CODEC_TEST: u8 = 1;
}

impl sails::client::Program for CodecProgramProgram {}

pub trait CodecProgram {
    type Env: sails::client::GearEnv;
    fn codec_test(&self) -> sails::client::Service<codec_test::CodecTestImpl, Self::Env>;
}

impl<E: sails::client::GearEnv> CodecProgram for sails::client::Actor<CodecProgramProgram, E> {
    type Env = E;
    fn codec_test(&self) -> sails::client::Service<codec_test::CodecTestImpl, Self::Env> {
        self.service(CodecProgramProgram::ROUTE_ID_CODEC_TEST)
    }
}
pub trait CodecProgramCtors {
    type Env: sails::client::GearEnv + sails::client::EnvWithCtor;
}

impl<E: sails::client::GearEnv + sails::client::EnvWithCtor> CodecProgramCtors
    for sails::client::Deployment<CodecProgramProgram, E>
{
    type Env = E;
}

pub mod io {
    use super::*;
}

pub mod codec_test {
    use super::*;

    pub trait CodecTest {
        type Env: sails::client::GearEnv;
        /// Available via both codecs (default)
        fn both_method(&mut self, p1: u32)
        -> sails::client::PendingCall<io::BothMethod, Self::Env>;
        /// Query available via both
        fn both_query(&self, p1: bool) -> sails::client::PendingCall<io::BothQuery, Self::Env>;
        /// SCALE only
        fn scale_only(&mut self, p1: u32) -> sails::client::PendingCall<io::ScaleOnly, Self::Env>;
    }

    pub struct CodecTestImpl;

    impl sails::client::Identifiable for CodecTestImpl {
        const INTERFACE_ID: sails::InterfaceId =
            sails::InterfaceId::from_bytes_8([61, 58, 184, 103, 238, 206, 142, 225]);
    }

    impl<E: sails::client::GearEnv> CodecTest for sails::client::Service<CodecTestImpl, E> {
        type Env = E;
        fn both_method(
            &mut self,
            p1: u32,
        ) -> sails::client::PendingCall<io::BothMethod, Self::Env> {
            self.pending_call((p1,))
        }
        fn both_query(&self, p1: bool) -> sails::client::PendingCall<io::BothQuery, Self::Env> {
            self.pending_call((p1,))
        }
        fn scale_only(&mut self, p1: u32) -> sails::client::PendingCall<io::ScaleOnly, Self::Env> {
            self.pending_call((p1,))
        }
    }

    pub mod io {
        use super::*;
        sails::io_struct_impl!(BothMethod (p1: u32) -> String, 0, <super::CodecTestImpl as sails::client::Identifiable>::INTERFACE_ID);
        sails::io_struct_impl!(BothQuery (p1: bool) -> bool, 3, <super::CodecTestImpl as sails::client::Identifiable>::INTERFACE_ID);
        sails::io_struct_impl!(ScaleOnly (p1: u32) -> u32, 1, <super::CodecTestImpl as sails::client::Identifiable>::INTERFACE_ID);
    }

    #[cfg(not(target_arch = "wasm32"))]
    pub mod events {
        use super::*;
        #[sails::sails_type(crate = sails)]
        #[derive(PartialEq, Debug)]
        pub enum CodecTestEvents {
            /// Available through both codecs
            #[codec(index = 0)]
            BothEvent(u32),
            /// SCALE only
            #[codec(index = 1)]
            ScaleOnlyEvent(u32),
        }

        impl CodecTestEvents {
            pub fn entry_id(&self) -> u16 {
                match self {
                    Self::BothEvent { .. } => 0,
                    Self::ScaleOnlyEvent { .. } => 1,
                }
            }
        }

        impl sails::client::Event for CodecTestEvents {
            fn decode_event(
                route: &sails::client::RouteIdx,
                payload: impl AsRef<[u8]>,
            ) -> Result<Self, sails::scale_codec::Error> {
                sails::client::decode_event_v2::<Self>(route.0, payload)
            }
        }

        impl sails::client::Identifiable for CodecTestEvents {
            const INTERFACE_ID: sails::InterfaceId =
                <CodecTestImpl as sails::client::Identifiable>::INTERFACE_ID;
        }

        impl sails::client::ServiceWithEvents for CodecTestImpl {
            type Event = CodecTestEvents;
        }
    }

    #[cfg(feature = "with_mocks")]
    #[cfg(not(target_arch = "wasm32"))]
    pub mod mockall {
        use super::*;
        use sails::mockall::*;
        mock! {
            pub CodecTest {}

            #[allow(refining_impl_trait)]
            #[allow(clippy::type_complexity)]
            impl codec_test::CodecTest for CodecTest {
                type Env = sails::client::GstdEnv;
                fn both_method (&mut self, p1: u32) -> sails::client::PendingCall<codec_test::io::BothMethod, sails::client::GstdEnv>;fn both_query (&self, p1: bool) -> sails::client::PendingCall<codec_test::io::BothQuery, sails::client::GstdEnv>;fn scale_only (&mut self, p1: u32) -> sails::client::PendingCall<codec_test::io::ScaleOnly, sails::client::GstdEnv>;
            }
        }
    }
}
