rs/client-gen-v2/tests/snapshots/generator__complex_type_generation_works.snap
---
source: rs/client-gen-v2/tests/generator.rs
expression: gen_client(IDL)
---
// Code generated by sails-client-gen-v2. DO NOT EDIT.
#[cfg(feature = "with_mocks")]
#[cfg(not(target_arch = "wasm32"))]
extern crate std;
#[allow(unused_imports)]
use sails::{client::*, collections::*, prelude::*};
pub struct ComplexTypesProgramProgram;

impl ComplexTypesProgramProgram {
    pub const ROUTE_ID_MY_COMPLEX_SERVICE: u8 = 1;
    pub const ROUTE_ID_ANOTHER_SERVICE: u8 = 2;
}

impl sails::client::Program for ComplexTypesProgramProgram {}

pub trait ComplexTypesProgram {
    type Env: sails::client::GearEnv;
    fn my_complex_service(
        &self,
    ) -> sails::client::Service<my_complex_service::MyComplexServiceImpl, Self::Env>;
    fn another_service(
        &self,
    ) -> sails::client::Service<another_service::AnotherServiceImpl, Self::Env>;
}

impl<E: sails::client::GearEnv> ComplexTypesProgram
    for sails::client::Actor<ComplexTypesProgramProgram, E>
{
    type Env = E;
    fn my_complex_service(
        &self,
    ) -> sails::client::Service<my_complex_service::MyComplexServiceImpl, Self::Env> {
        self.service(ComplexTypesProgramProgram::ROUTE_ID_MY_COMPLEX_SERVICE)
    }
    fn another_service(
        &self,
    ) -> sails::client::Service<another_service::AnotherServiceImpl, Self::Env> {
        self.service(ComplexTypesProgramProgram::ROUTE_ID_ANOTHER_SERVICE)
    }
}
pub trait ComplexTypesProgramCtors {
    type Env: sails::client::GearEnv + sails::client::EnvWithCtor;
    fn new_program(
        self,
        initial_count: u32,
        id_prefix: String,
    ) -> sails::client::PendingCtor<ComplexTypesProgramProgram, io::NewProgram, Self::Env>;
}

impl<E: sails::client::GearEnv + sails::client::EnvWithCtor> ComplexTypesProgramCtors
    for sails::client::Deployment<ComplexTypesProgramProgram, E>
{
    type Env = E;
    fn new_program(
        self,
        initial_count: u32,
        id_prefix: String,
    ) -> sails::client::PendingCtor<ComplexTypesProgramProgram, io::NewProgram, Self::Env> {
        self.pending_ctor((initial_count, id_prefix))
    }
}

pub mod io {
    use super::*;
    sails::io_struct_impl!(NewProgram (initial_count: u32, id_prefix: String) -> (), 0);
}

pub mod my_complex_service {
    use super::*;

    #[sails::sails_type(crate = sails)]
    #[derive(PartialEq, Clone, Debug)]
    pub struct ServiceLocalConfig {
        pub enabled: bool,
        pub retry_count: NonZeroU8,
        pub actor_list: Vec<ActorId>,
    }
    #[sails::sails_type(crate = sails)]
    #[derive(PartialEq, Clone, Debug)]
    pub enum ServiceStatus {
        Active(ServiceLocalConfig),
        Paused,
        Error(ErrorType),
    }
    #[sails::sails_type(crate = sails)]
    #[derive(PartialEq, Clone, Debug)]
    pub struct ProgramGlobalInfo {
        pub id: ActorId,
        pub config_version: u32,
        pub map_of_data: Vec<(String, ProgramScopedData)>,
        pub optional_value: Option<u64>,
        pub result_status: Result<(u32, bool), ErrorType>,
        pub values_vec: Vec<u8>,
        pub non_zero_id: NonZeroU16,
        pub h256_hash: H256,
    }
    #[sails::sails_type(crate = sails)]
    #[derive(PartialEq, Clone, Debug)]
    pub struct ProgramScopedData {
        pub name: String,
        pub value: U256,
        pub sub_id: u32,
    }
    #[sails::sails_type(crate = sails)]
    #[derive(PartialEq, Clone, Debug)]
    pub enum ErrorType {
        InvalidInput,
        NotFound(String),
        AccessDenied { id: ActorId, reason: String },
    }
    #[sails::sails_type(crate = sails)]
    #[derive(PartialEq, Clone, Debug)]
    pub struct GenericData<T, U> {
        pub value_t: T,
        pub value_u: U,
        pub description: String,
    }
    #[sails::sails_type(crate = sails)]
    #[derive(PartialEq, Clone, Debug)]
    pub enum GenericResult<V> {
        Success(V),
        Failure(ErrorType),
    }
    #[sails::sails_type(crate = sails)]
    #[derive(PartialEq, Clone, Debug)]
    pub struct NonZeroU8(pub u8);
    #[sails::sails_type(crate = sails)]
    #[derive(PartialEq, Clone, Debug)]
    pub struct NonZeroU16(pub u16);
    #[sails::sails_type(crate = sails)]
    #[derive(PartialEq, Clone, Debug)]
    pub struct NonZeroU32(pub u32);

    pub trait MyComplexService {
        type Env: sails::client::GearEnv;
        fn get_actor_ids(
            &self,
            count: u32,
        ) -> sails::client::PendingCall<io::GetActorIds, Self::Env>;
        fn get_data(
            &mut self,
            key: String,
        ) -> sails::client::PendingCall<io::GetData, Self::Env>;
        fn get_info(&self) -> sails::client::PendingCall<io::GetInfo, Self::Env>;
        fn initialize(
            &mut self,
            start_data: ProgramGlobalInfo,
            max_size: NonZeroU32,
        ) -> sails::client::PendingCall<io::Initialize, Self::Env>;
        fn process_generic_data(
            &mut self,
            input_data: GenericData<u32, String>,
            list_of_generics: Vec<GenericData<ActorId, U256>>,
            optional_generic_result: Option<GenericResult<bool>>,
        ) -> sails::client::PendingCall<io::ProcessGenericData, Self::Env>;
        fn update_status(
            &mut self,
            id: u64,
            new_status: ServiceStatus,
            metadata: Option<String>,
        ) -> sails::client::PendingCall<io::UpdateStatus, Self::Env>;
    }

    pub struct MyComplexServiceImpl;

    impl sails::client::Identifiable for MyComplexServiceImpl {
        const INTERFACE_ID: sails::InterfaceId =
            sails::InterfaceId::from_bytes_8([18, 83, 117, 202, 195, 37, 47, 107]);
    }

    impl<E: sails::client::GearEnv> MyComplexService
        for sails::client::Service<MyComplexServiceImpl, E>
    {
        type Env = E;
        fn get_actor_ids(
            &self,
            count: u32,
        ) -> sails::client::PendingCall<io::GetActorIds, Self::Env> {
            self.pending_call((count,))
        }
        fn get_data(
            &mut self,
            key: String,
        ) -> sails::client::PendingCall<io::GetData, Self::Env> {
            self.pending_call((key,))
        }
        fn get_info(&self) -> sails::client::PendingCall<io::GetInfo, Self::Env> {
            self.pending_call(())
        }
        fn initialize(
            &mut self,
            start_data: ProgramGlobalInfo,
            max_size: NonZeroU32,
        ) -> sails::client::PendingCall<io::Initialize, Self::Env> {
            self.pending_call((start_data, max_size))
        }
        fn process_generic_data(
            &mut self,
            input_data: GenericData<u32, String>,
            list_of_generics: Vec<GenericData<ActorId, U256>>,
            optional_generic_result: Option<GenericResult<bool>>,
        ) -> sails::client::PendingCall<io::ProcessGenericData, Self::Env> {
            self.pending_call((input_data, list_of_generics, optional_generic_result))
        }
        fn update_status(
            &mut self,
            id: u64,
            new_status: ServiceStatus,
            metadata: Option<String>,
        ) -> sails::client::PendingCall<io::UpdateStatus, Self::Env> {
            self.pending_call((id, new_status, metadata))
        }
    }

    pub mod io {
        use super::*;
        sails::io_struct_impl!(GetActorIds (count: u32) -> Vec<ActorId>, 0, <super::MyComplexServiceImpl as sails::client::Identifiable>::INTERFACE_ID);
        sails::io_struct_impl!(GetData (key: String) -> super::Result<super::ProgramScopedData, super::ErrorType, >, 1, <super::MyComplexServiceImpl as sails::client::Identifiable>::INTERFACE_ID);
        sails::io_struct_impl!(GetInfo () -> super::ProgramGlobalInfo, 2, <super::MyComplexServiceImpl as sails::client::Identifiable>::INTERFACE_ID);
        sails::io_struct_impl!(Initialize (start_data: super::ProgramGlobalInfo, max_size: super::NonZeroU32) -> super::Result<(), super::ErrorType, >, 3, <super::MyComplexServiceImpl as sails::client::Identifiable>::INTERFACE_ID);
        sails::io_struct_impl!(ProcessGenericData (input_data: super::GenericData<u32, String, >, list_of_generics: Vec<super::GenericData<ActorId, U256, >>, optional_generic_result: super::Option<super::GenericResult<bool, >, >) -> super::GenericData<bool, u8, >, 4, <super::MyComplexServiceImpl as sails::client::Identifiable>::INTERFACE_ID);
        sails::io_struct_impl!(UpdateStatus (id: u64, new_status: super::ServiceStatus, metadata: super::Option<String, >) -> super::GenericResult<u32, >, 5, <super::MyComplexServiceImpl as sails::client::Identifiable>::INTERFACE_ID);
    }

    #[cfg(feature = "with_mocks")]
    #[cfg(not(target_arch = "wasm32"))]
    pub mod mockall {
        use super::*;
        use sails::mockall::*;
        mock! {
            pub MyComplexService {}

            #[allow(refining_impl_trait)]
            #[allow(clippy::type_complexity)]
            impl my_complex_service::MyComplexService for MyComplexService {
                type Env = sails::client::GstdEnv;
                fn get_actor_ids (&self, count: u32) -> sails::client::PendingCall<my_complex_service::io::GetActorIds, sails::client::GstdEnv>;fn get_data (&mut self, key: String) -> sails::client::PendingCall<my_complex_service::io::GetData, sails::client::GstdEnv>;fn get_info (&self, ) -> sails::client::PendingCall<my_complex_service::io::GetInfo, sails::client::GstdEnv>;fn initialize (&mut self, start_data: ProgramGlobalInfo, max_size: NonZeroU32) -> sails::client::PendingCall<my_complex_service::io::Initialize, sails::client::GstdEnv>;fn process_generic_data (&mut self, input_data: GenericData<u32, String, >, list_of_generics: Vec<GenericData<ActorId, U256, >>, optional_generic_result: Option<GenericResult<bool, >, >) -> sails::client::PendingCall<my_complex_service::io::ProcessGenericData, sails::client::GstdEnv>;fn update_status (&mut self, id: u64, new_status: ServiceStatus, metadata: Option<String, >) -> sails::client::PendingCall<my_complex_service::io::UpdateStatus, sails::client::GstdEnv>;
            }
        }
    }
}

pub mod another_service {
    use super::*;

    #[sails::sails_type(crate = sails)]
    #[derive(PartialEq, Clone, Debug)]
    pub enum ErrorType {
        InvalidInput,
        NotFound(String),
        AccessDenied { id: ActorId, reason: String },
    }

    pub trait AnotherService {
        type Env: sails::client::GearEnv;
        fn ping(&mut self) -> sails::client::PendingCall<io::Ping, Self::Env>;
        fn process_values(
            &mut self,
            data: Vec<U256>,
        ) -> sails::client::PendingCall<io::ProcessValues, Self::Env>;
    }

    pub struct AnotherServiceImpl;

    impl sails::client::Identifiable for AnotherServiceImpl {
        const INTERFACE_ID: sails::InterfaceId =
            sails::InterfaceId::from_bytes_8([155, 46, 27, 116, 89, 52, 232, 187]);
    }

    impl<E: sails::client::GearEnv> AnotherService
        for sails::client::Service<AnotherServiceImpl, E>
    {
        type Env = E;
        fn ping(&mut self) -> sails::client::PendingCall<io::Ping, Self::Env> {
            self.pending_call(())
        }
        fn process_values(
            &mut self,
            data: Vec<U256>,
        ) -> sails::client::PendingCall<io::ProcessValues, Self::Env> {
            self.pending_call((data,))
        }
    }

    pub mod io {
        use super::*;
        sails::io_struct_impl!(Ping () -> String, 0, <super::AnotherServiceImpl as sails::client::Identifiable>::INTERFACE_ID);
        sails::io_struct_impl!(ProcessValues (data: Vec<U256>) -> super::Result<(), super::ErrorType, >, 1, <super::AnotherServiceImpl as sails::client::Identifiable>::INTERFACE_ID);
    }

    #[cfg(feature = "with_mocks")]
    #[cfg(not(target_arch = "wasm32"))]
    pub mod mockall {
        use super::*;
        use sails::mockall::*;
        mock! {
            pub AnotherService {}

            #[allow(refining_impl_trait)]
            #[allow(clippy::type_complexity)]
            impl another_service::AnotherService for AnotherService {
                type Env = sails::client::GstdEnv;
                fn ping (&mut self, ) -> sails::client::PendingCall<another_service::io::Ping, sails::client::GstdEnv>;fn process_values (&mut self, data: Vec<U256>) -> sails::client::PendingCall<another_service::io::ProcessValues, sails::client::GstdEnv>;
            }
        }
    }
}
