rs/client-gen-v2/tests/snapshots/generator__events_works.snap
---
source: rs/client-gen-v2/tests/generator.rs
expression: gen_client(idl)
---
// Code generated by sails-client-gen-v2. DO NOT EDIT.
#[cfg(feature = "with_mocks")]
#[cfg(not(target_arch = "wasm32"))]
extern crate std;
#[allow(unused_imports)]
use sails::{client::*, collections::*, prelude::*};

pub mod service_with_events {
    use super::*;

    #[sails::sails_type(crate = sails)]
    #[derive(PartialEq, Clone, Debug)]
    pub struct MyParam {
        pub f1: U256,
        pub f2: Vec<u8>,
        pub f3: Option<(u64, U256)>,
    }

    pub trait ServiceWithEvents {
        type Env: sails::client::GearEnv;
        fn do_this(
            &mut self,
            p1: U256,
            p2: MyParam,
        ) -> sails::client::PendingCall<io::DoThis, Self::Env>;
    }

    pub struct ServiceWithEventsImpl;

    impl sails::client::Identifiable for ServiceWithEventsImpl {
        const INTERFACE_ID: sails::InterfaceId =
            sails::InterfaceId::from_bytes_8([186, 231, 26, 185, 242, 135, 49, 106]);
    }

    impl<E: sails::client::GearEnv> ServiceWithEvents
        for sails::client::Service<ServiceWithEventsImpl, E>
    {
        type Env = E;
        fn do_this(
            &mut self,
            p1: U256,
            p2: MyParam,
        ) -> sails::client::PendingCall<io::DoThis, Self::Env> {
            self.pending_call((p1, p2))
        }
    }

    pub mod io {
        use super::*;
        sails::io_struct_impl!(DoThis (p1: U256, p2: super::MyParam) -> u64, 0, <super::ServiceWithEventsImpl as sails::client::Identifiable>::INTERFACE_ID);
    }

    #[cfg(not(target_arch = "wasm32"))]
    pub mod events {
        use super::*;
        #[sails::sails_type(crate = sails)]
        #[derive(PartialEq, Debug)]
        pub enum ServiceWithEventsEvents {
            #[codec(index = 0)]
            One(u64),
            #[codec(index = 1)]
            Reset,
            #[codec(index = 2)]
            Three(MyParam),
            #[codec(index = 3)]
            Two { id: u8, reference: u64 },
        }

        impl ServiceWithEventsEvents {
            pub fn entry_id(&self) -> u16 {
                match self {
                    Self::One { .. } => 0,
                    Self::Reset { .. } => 1,
                    Self::Three { .. } => 2,
                    Self::Two { .. } => 3,
                }
            }
        }

        impl sails::client::Event for ServiceWithEventsEvents {
            fn decode_event(
                route: &sails::client::RouteIdx,
                payload: impl AsRef<[u8]>,
            ) -> Result<Self, sails::scale_codec::Error> {
                sails::client::decode_event_v2::<Self>(route.0, payload)
            }
        }

        impl sails::client::Identifiable for ServiceWithEventsEvents {
            const INTERFACE_ID: sails::InterfaceId =
                <ServiceWithEventsImpl as sails::client::Identifiable>::INTERFACE_ID;
        }

        impl sails::client::ServiceWithEvents for ServiceWithEventsImpl {
            type Event = ServiceWithEventsEvents;
        }
    }

    #[cfg(feature = "with_mocks")]
    #[cfg(not(target_arch = "wasm32"))]
    pub mod mockall {
        use super::*;
        use sails::mockall::*;
        mock! {
            pub ServiceWithEvents {}

            #[allow(refining_impl_trait)]
            #[allow(clippy::type_complexity)]
            impl service_with_events::ServiceWithEvents for ServiceWithEvents {
                type Env = sails::client::GstdEnv;
                fn do_this (&mut self, p1: U256, p2: MyParam) -> sails::client::PendingCall<service_with_events::io::DoThis, sails::client::GstdEnv>;
            }
        }
    }
}
