rs/client-gen-v2/tests/snapshots/generator__external_types.snap
---
source: rs/client-gen-v2/tests/generator.rs
expression: code
---
// Code generated by sails-client-gen-v2. DO NOT EDIT.
#[allow(unused_imports)]
use my_crate::MyParam;
#[allow(unused_imports)]
use my_crate::sails::{client::*, collections::*, prelude::*};

pub mod service {
    use super::*;

    #[derive(Encode, Decode, TypeInfo, ReflectHash)]
    #[codec(crate = my_crate::sails::scale_codec)]
    #[type_info(crate = my_crate::sails::type_info)]
    #[reflect_hash(crate = my_crate::sails)]
    pub enum MyParam2 {
        Variant1,
        Variant2(u32),
        Variant3(u32),
        Variant4(u8, u32),
        Variant5 { f1: String, f2: Vec<u8> },
    }

    pub trait Service {
        type Env: my_crate::sails::client::GearEnv;
        fn do_that(
            &mut self,
            p1: (u8, u32),
        ) -> my_crate::sails::client::PendingCall<io::DoThat, Self::Env>;
        fn do_this(
            &mut self,
            p1: u32,
            p2: MyParam,
        ) -> my_crate::sails::client::PendingCall<io::DoThis, Self::Env>;
    }

    pub struct ServiceImpl;

    impl my_crate::sails::client::Identifiable for ServiceImpl {
        const INTERFACE_ID: my_crate::sails::InterfaceId =
            my_crate::sails::InterfaceId::from_bytes_8([82, 241, 49, 169, 231, 31, 0, 230]);
    }

    impl<E: my_crate::sails::client::GearEnv> Service
        for my_crate::sails::client::Service<ServiceImpl, E>
    {
        type Env = E;
        fn do_that(
            &mut self,
            p1: (u8, u32),
        ) -> my_crate::sails::client::PendingCall<io::DoThat, Self::Env> {
            self.pending_call((p1,))
        }
        fn do_this(
            &mut self,
            p1: u32,
            p2: MyParam,
        ) -> my_crate::sails::client::PendingCall<io::DoThis, Self::Env> {
            self.pending_call((p1, p2))
        }
    }

    pub mod io {
        use super::*;
        my_crate::sails::io_struct_impl!(DoThat (p1: (u8, u32, )) -> u8, 0, <super::ServiceImpl as my_crate::sails::client::Identifiable>::INTERFACE_ID);
        my_crate::sails::io_struct_impl!(DoThis (p1: u32, p2: super::MyParam) -> u16, 1, <super::ServiceImpl as my_crate::sails::client::Identifiable>::INTERFACE_ID);
    }
}
