rs/client-gen-v2/tests/snapshots/generator__full.snap
---
source: rs/client-gen-v2/tests/generator.rs
expression: "gen_client(IDL, \"Service\")"
---
// Code generated by sails-client-gen. DO NOT EDIT.
#[allow(unused_imports)]
use sails::{client::*, collections::*, prelude::*};
pub struct ServiceProgram;

impl sails::client::Program for ServiceProgram {}

pub trait Service {
    type Env: sails::client::GearEnv;
    fn service(&self) -> sails::client::Service<service::ServiceImpl, Self::Env>;
}

impl<E: sails::client::GearEnv> Service for sails::client::Actor<ServiceProgram, E> {
    type Env = E;
    fn service(&self) -> sails::client::Service<service::ServiceImpl, Self::Env> {
        self.service(stringify!(Service))
    }
}

pub trait ServiceCtors {
    type Env: sails::client::GearEnv;
    /// New constructor
    #[allow(clippy::new_ret_no_self)]
    #[allow(clippy::wrong_self_convention)]
    fn new(self, a: u32) -> sails::client::PendingCtor<ServiceProgram, io::New, Self::Env>;
}

impl<E: sails::client::GearEnv> ServiceCtors
    for sails::client::Deployment<ServiceProgram, E>
{
    type Env = E;
    fn new(self, a: u32) -> sails::client::PendingCtor<ServiceProgram, io::New, Self::Env> {
        self.pending_ctor((a,))
    }
}

pub mod io {
    use super::*;
    sails::io_struct_impl!(New (a: u32) -> ());
}

pub mod service {
    use super::*;

    pub trait Service {
        type Env: sails::client::GearEnv;
        /// Some description
        fn do_this(
            &mut self,
            p1: u32,
            p2: String,
            p3: (Option<String>, u8),
            p4: ThisThatSvcAppTupleStruct,
        ) -> sails::client::PendingCall<io::DoThis, Self::Env>;
        /// Some multiline description
        /// Second line
        /// Third line
        fn do_that(
            &mut self,
            param: ThisThatSvcAppDoThatParam,
        ) -> sails::client::PendingCall<io::DoThat, Self::Env>;
        /// This is a query
        fn this(&self, v1: Vec<u16>) -> sails::client::PendingCall<io::This, Self::Env>;
        /// This is a second query
        /// This is a second line
        fn that(&self, v1: ()) -> sails::client::PendingCall<io::That, Self::Env>;
    }

    pub struct ServiceImpl;

    impl<E: sails::client::GearEnv> Service for sails::client::Service<ServiceImpl, E> {
        type Env = E;
        fn do_this(
            &mut self,
            p1: u32,
            p2: String,
            p3: (Option<String>, u8),
            p4: ThisThatSvcAppTupleStruct,
        ) -> sails::client::PendingCall<io::DoThis, Self::Env> {
            self.pending_call((p1, p2, p3, p4))
        }
        fn do_that(
            &mut self,
            param: ThisThatSvcAppDoThatParam,
        ) -> sails::client::PendingCall<io::DoThat, Self::Env> {
            self.pending_call((param,))
        }
        fn this(&self, v1: Vec<u16>) -> sails::client::PendingCall<io::This, Self::Env> {
            self.pending_call((v1,))
        }
        fn that(&self, v1: ()) -> sails::client::PendingCall<io::That, Self::Env> {
            self.pending_call((v1,))
        }
    }

    pub mod io {
        use super::*;
        sails::io_struct_impl!(DoThis (p1: u32, p2: String, p3: (Option<String>,u8,), p4: super::ThisThatSvcAppTupleStruct) -> (String,u32,));
        sails::io_struct_impl!(DoThat (param: super::ThisThatSvcAppDoThatParam) -> Result<(String,u32,), (String,)>);
        sails::io_struct_impl!(This (v1: Vec<u16>) -> u32);
        sails::io_struct_impl!(That (v1: ()) -> Result<String, String>);
    }

    #[cfg(not(target_arch = "wasm32"))]
    pub mod events {
        use super::*;
        #[derive(PartialEq, Debug, Encode, Decode, ReflectHash)]
        #[codec(crate = sails::scale_codec)]
        #[reflect_hash(crate = sails)]
        pub enum ServiceEvents {
            /// `This` Done
            ThisDone(u32),
            /// `That` Done too
            ThatDone {
                /// This is `p1` field
                p1: String,
            },
        }
        impl sails::client::Event for ServiceEvents {
            const EVENT_NAMES: &'static [Route] = &["ThisDone", "ThatDone"];
        }

        impl sails::client::ServiceWithEvents for ServiceImpl {
            type Event = ServiceEvents;
        }
    }
}
/// ThisThatSvcAppTupleStruct docs
#[derive(PartialEq, Clone, Debug, Encode, Decode, TypeInfo, ReflectHash)]
#[codec(crate = sails::scale_codec)]
#[scale_info(crate = sails::scale_info)]
#[reflect_hash(crate = sails)]
pub struct ThisThatSvcAppTupleStruct(
    /// field `bool`
    pub bool,
);
/// ThisThatSvcAppDoThatParam docs
#[derive(PartialEq, Clone, Debug, Encode, Decode, TypeInfo, ReflectHash)]
#[codec(crate = sails::scale_codec)]
#[scale_info(crate = sails::scale_info)]
#[reflect_hash(crate = sails)]
pub struct ThisThatSvcAppDoThatParam {
    /// field `query`
    pub query: u32,
    /// field `result`
    pub result: String,
    /// field `p3`
    pub p3: ThisThatSvcAppManyVariants,
}
/// ThisThatSvcAppManyVariants docs
#[derive(PartialEq, Clone, Debug, Encode, Decode, TypeInfo, ReflectHash)]
#[codec(crate = sails::scale_codec)]
#[scale_info(crate = sails::scale_info)]
#[reflect_hash(crate = sails)]
pub enum ThisThatSvcAppManyVariants {
    /// variant `One`
    One,
    /// variant `Two`
    Two(u32),
    Three(Option<u32>),
    Four {
        a: u32,
        b: Option<u16>,
    },
    Five((String, u32)),
    Six((u32,)),
}
#[derive(PartialEq, Clone, Debug, Encode, Decode, TypeInfo, ReflectHash)]
#[codec(crate = sails::scale_codec)]
#[scale_info(crate = sails::scale_info)]
#[reflect_hash(crate = sails)]
pub enum T {
    One,
}

#[cfg(feature = "with_mocks")]
#[cfg(not(target_arch = "wasm32"))]
extern crate std;

#[cfg(feature = "with_mocks")]
#[cfg(not(target_arch = "wasm32"))]
pub mod mockall {
    use super::*;
    use sails::mockall::*;
    mock! {
        pub Service {}

        #[allow(refining_impl_trait)]
        #[allow(clippy::type_complexity)]
        impl service::Service for Service {
            type Env = sails::client::GstdEnv;
            fn do_this (&mut self, p1: u32, p2: String, p3: (Option<String>,u8,), p4: ThisThatSvcAppTupleStruct) -> sails::client::PendingCall<service::io::DoThis, sails::client::GstdEnv>;fn do_that (&mut self, param: ThisThatSvcAppDoThatParam) -> sails::client::PendingCall<service::io::DoThat, sails::client::GstdEnv>;fn this (& self, v1: Vec<u16>) -> sails::client::PendingCall<service::io::This, sails::client::GstdEnv>;fn that (& self, v1: ()) -> sails::client::PendingCall<service::io::That, sails::client::GstdEnv>;
        }
    }
}
